# integration_test

./: main.py  pyproject.toml
api/: inventory.py  price.py
models/: __init__.py  inventory.py  price.py
parsers/: inventory_parser.py  price_parser.py
settings/: logger.py
