[tool.poetry]
name = "integrations-test"
version = "0.1.0"
description = ""
authors = ["vlad1slavM <46625953+vlad1slavM@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^2.4.2"
pandas = "^2.1.1"
loguru = "^0.7.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

